# zero2prod

./: Cargo.toml  Dockerfile  sqlx-data.json
.cargo/: config.toml
.github/workflows/: rust.yml
.sqlx/: query-23b32f733888f6944304270d7d0ab43f21dc85dc8d7375542bcdcd756b94475e.json  query-31718385d1c085a82659b50f06b18f16955488e6b1236a9e96aeabff826ce8d2.json
configuration/: base.toml  production.toml
migrations/: 20230305030426_create_subscription_tokens_table.sql  20230312185001_create_users_table.sql  20230324222021_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: app_state.rs  authentication.rs  configuration.rs  email_client.rs  lib.rs  logger.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
templates/: admin_dashboard.html  base.html  change_password.html  flashes.html  login.html
tests/: common.rs  health_check.rs  subscriptions.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
